@@ -1305,7 +1305,7 @@ l_pre_save                              = "Save";
 
 [pwreset]
 l_pwr_title                             = "Password Reset";
-l_pwr_timeout                           = "Sorry! The password reset period of 30 minutes has expired for this code. Please request a new password reset.";
+l_pwr_timeout                           = "Sorry! The password reset period of 90 minutes has expired for this code. Please request a new password reset.";
 l_pwr_invalid                           = "Sorry! This code is not recognized as valid";
 l_pwr_success                           = "Password has been changed successfully";
 
