@@ -46,7 +46,7 @@ DbOp::dbResult ($db, $result, __LINE__, __FILE__);
 if (!$result->EOF && $result != false)
 {
     $recovery_time = $result->fields['recovery_time'];
-    $expiration = $recovery_time + (30 * 60); // 30 minutes expiration for e-mailed password resets
+    $expiration = $recovery_time + (90 * 60); // 90 minutes expiration for e-mailed password resets
 
     // If time is within reset passowrd period (less than expiration), prompt user for new password
     if (time() > $expiration)
