@@ -1,3 +1,7 @@
+TheKabal (8 July 2013)
+--------------------------------------
+Set password reset to 90 minutes, not 30.
+
 TheKabal (7 July 2013)
 --------------------------------------
 Add password reset function that sends an email with a reset code, based on a hash of the existing password
